# freespeech

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.base  Dockerfile.test  LICENSE  Makefile  README.md  anon.session  app.yaml  clip.py  cspell.config.yaml  free_speech.py  mkdocs.yml  mypy.ini  package-lock.json  pyproject.toml  requirements.txt  run.sh  run_discord.sh  run_discord_google.sh  run_telegram_google.sh  run_web.sh  setup.py  split_text.py
.devcontainer/: devcontainer.json
.github/workflows/: docker-image.yml
conf/: add-voiceover.yaml
docs/: how_to.md  index.md  tutorial.md
docs/extra/: palette.css
docs/package_reference/: data_types.md  operations.md
examples/: Untitled.ipynb
freespeech/: api.py  cli.py  client.py  const.py  datastore.py  discord_bot.py  env.py  gdocs.py  language.py  logging.py  main.py  media.py  ops.py  services.py  speech.py  storage.py  telegram.py  text.py  types.py  web.py  youtube.py
freespeech-ui/: package-lock.json  package.json
freespeech-ui/public/: index.html
freespeech-ui/src/: App.css  App.js  Navbar.js
freespeech-ui/src/components/: Features.js  Hero.js  Home.js
freespeech-ui/src/user/: Login.js
freespeech/api/: auth.py  chat.py  crud.py  dub.py  edge.py  errors.py  gdocs.py  hash.py  language.py  media.py  middleware.py  notion.py  speech.py  synthesize.py  tasks.py  telegram.py  text.py  transcribe.py  transcript.py  translate.py  youtube.py
freespeech/api/storage/: doc.py  obj.py
freespeech/client/: chat.py  client.py  errors.py  media.py  tasks.py  transcript.py
freespeech/functions/: pubsub_to_telegram.py
freespeech/lib/: audio.py  auth.py  chat.py  chunking.py  concurrency.py  elevenlabs.py  gdocs.py  hash.py  language.py  llms.py  media.py  notion.py  speech.py  ssmd.py  subtitles.py  tasks.py  text.py  transcript.py  tts.py  youtube.py
freespeech/lib/storage/: doc.py  obj.py
freespeech/lib/tasks/: cloud_tasks.py  dummy.py  results.py
freespeech/notion/: client.py  types.py
freespeech/run/: discord_bot.py  telegram.py  web.py
freespeech/services/: crud.py  dub.py  language.py  media.py  notion.py  pub.py  speech.py
freespeech/utils/: fetch_president_ua.py  fetching.py
hooks/: pre-commit
notebooks/: analytics.ipynb  azure-voices.ipynb  azure_tts_example.ipynb  bot-data.ipynb  client_example.ipynb  crud-examples.ipynb  examples.ipynb  fix_slow_speech.ipynb  prompting.ipynb  smooth-speech-algo.ipynb  speech-tests.ipynb  ssmd.ipynb  telegram.ipynb  transcribe.ipynb  transcript.ipynb
notebooks/data/: alice.json  azure_voices.json  jfk.json  kafka.json  zelensky.json
terraform/: .gitignore  main.tf
tests/: commons.py  conftest.py  test_cli.py  test_client.py  test_datastore.py  test_e2e.py  test_gdocs.py  test_language.py  test_media.py  test_notion.py  test_ops.py  test_speech.py  test_storage.py  test_telegram.py  test_text.py  test_types.py  test_youtube.py
tests/api/: test_api.py  test_ask.py  test_chat.py  test_compress_events.py  test_crud.py  test_dub.py  test_error_handling.py  test_gdocs.py  test_ingest.py  test_language.py  test_load.py  test_media.py  test_notion.py  test_save.py  test_speech.py  test_synthesize.py  test_telegram.py  test_text.py  test_transcribe.py  test_translate.py  test_youtube.py
tests/api/data/media/: ffprobe_output.json
tests/api/storage/: test_doc.py  test_obj.py
tests/client/: test_ask.py  test_ingest.py  test_load.py  test_malformed.py  test_media_client.py  test_save.py  test_synthesize.py
tests/data/: main_block.json  transcript_block.json
tests/e2e/: test_workflows.py
tests/functions/: test_pubusub_to_telegram.py
tests/lib/: test_audio.py  test_chat.py  test_chat_lib.py  test_elevenlabs.py  test_env.py  test_gdocs.py  test_language.py  test_media.py  test_notion.py  test_speech.py  test_ssmd.py  test_subtitles.py  test_tasks.py  test_text.py  test_transcript.py  test_youtube.py
tests/lib/data/media/: ffprobe_output.json
tests/lib/data/notion/: page.json
tests/lib/data/speech/: azure-stt-output.json  transcript-azure.json
tests/lib/data/subtitles/: karlsson.srt
tests/lib/data/transcript/: fmj.srt  karlsson.srt  test.ssmd
tests/lib/data/youtube/: auto-captions.json  auto-captions.xml  captions_en.xml  captions_missing_duration_en.xml  captions_ru.xml  captions_uk.xml  transcript_en_US.json  transcript_ru_RU.json  transcript_uk_UK.json
tests/lib/storage/: test_doc.py  test_obj.py
tests/services/: test_crud.py  test_dub.py
tests/utils/: test_fetching.py
workflows/: batch_from_csv.sh  ingest_synthesize_mix.sh
