[project]
name = "freespeech"
version = "0.2"

description = "Automate transcribing, translating, and dubbing audio and video content"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Artyom Astafurov", email = "artyom.astafurov@gmail.com" }]


requires-python = ">=3.11"

dependencies = [
    "aenum==3.1.15",
    "aiofiles==24.1.0",
    "aiohappyeyeballs==2.4.3",
    "aiohttp==3.10.10",
    "aiosignal==1.3.1",
    "altair==5.4.1",
    "annotated-types==0.7.0",
    "anyio==4.6.2.post1",
    "attrs==24.2.0",
    "audioread==3.0.1",
    "azure-core==1.32.0",
    "azure-storage-blob==12.23.1",
    "beautifulsoup4==4.12.3",
    "blinker==1.9.0",
    "blis==0.7.11",
    "cachetools==5.5.0",
    "catalogue==2.0.10",
    "certifi==2024.8.30",
    "cffi==1.17.1",
    "charset-normalizer==3.4.0",
    "click==8.1.7",
    "cloudpathlib==0.16.0",
    "confection==0.1.5",
    "cryptography==43.0.3",
    "cymem==2.0.8",
    "dataclasses-json==0.6.7",
    "dawg-python==0.7.2",
    "de-core-news-sm",
    "decorator==5.1.1",
    "deepgram-sdk==3.7.6",
    "deepl==1.19.1",
    "deprecated==1.2.14",
    "deprecation==2.1.0",
    "discord-py==2.4.0",
    "distro==1.9.0",
    "dnspython==2.7.0",
    "email-validator==2.2.0",
    "en-core-web-sm",
    "es-core-news-sm",
    "fastapi==0.110.3",
    "ffmpeg-python==0.2.0",
    "fi-core-news-sm",
    "filelock==3.16.1",
    "fr-core-news-sm",
    "frozenlist==1.5.0",
    "future==1.0.0",
    "gdown==5.2.0",
    "gitdb==4.0.11",
    "gitpython==3.1.43",
    "google-api-core==2.22.0",
    "google-api-python-client==2.151.0",
    "google-auth-httplib2==0.2.0",
    "google-auth-oauthlib==1.2.1",
    "google-auth==2.36.0",
    "google-cloud-appengine-logging==1.5.0",
    "google-cloud-audit-log==0.3.0",
    "google-cloud-core==2.4.1",
    "google-cloud-firestore==2.19.0",
    "google-cloud-logging==3.11.3",
    "google-cloud-speech==2.28.0",
    "google-cloud-storage==2.18.2",
    "google-cloud-tasks==2.17.0",
    "google-cloud-texttospeech==2.21.0",
    "google-cloud-translate==3.17.0",
    "google-crc32c==1.6.0",
    "google-resumable-media==2.7.2",
    "googleapis-common-protos==1.65.0",
    "grpc-google-iam-v1==0.13.1",
    "grpcio-status==1.67.1",
    "grpcio==1.67.1",
    "h11==0.14.0",
    "httpcore==1.0.6",
    "httplib2==0.22.0",
    "httptools==0.6.4",
    "httpx==0.27.2",
    "idna==3.10",
    "importlib-metadata==8.5.0",
    "isodate==0.7.2",
    "it-core-news-sm",
    "itsdangerous==2.2.0",
    "ja-core-news-sm",
    "jinja2==3.1.4",
    "jiter==0.7.0",
    "joblib==1.4.2",
    "jsonschema-specifications==2024.10.1",
    "jsonschema==4.23.0",
    "langcodes==3.4.1",
    "language-data==1.2.0",
    "lazy-loader==0.4",
    "librosa==0.10.2.post1",
    "llvmlite==0.43.0",
    "marisa-trie==1.2.1",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "marshmallow==3.23.1",
    "mdurl==0.1.2",
    "msgpack==1.1.0",
    "multidict==6.1.0",
    "murmurhash==1.0.10",
    "mypy-extensions==1.0.0",
    "narwhals==1.13.3",
    "numba==0.60.0",
    "numpy==1.26.4",
    "oauthlib==3.2.2",
    "openai==1.54.3",
    "opentelemetry-api==1.28.1",
    "orjson==3.10.11",
    "packaging==24.2",
    "pandas==2.2.3",
    "pathlib-abc==0.1.1",
    "pathy==0.11.0",
    "pillow==11.0.0",
    "pl-core-news-sm",
    "platformdirs==4.3.6",
    "pooch==1.8.2",
    "preshed==3.0.9",
    "propcache==0.2.0",
    "proto-plus==1.25.0",
    "protobuf==5.28.3",
    "pt-core-news-sm",
    "pyaes==1.6.1",
    "pyarrow==18.0.0",
    "pyasn1-modules==0.4.1",
    "pyasn1==0.6.1",
    "pycparser==2.22",
    "pydantic-core==2.23.4",
    "pydantic-extra-types==2.10.0",
    "pydantic-settings==2.6.1",
    "pydantic==2.9.2",
    "pydeck==0.9.1",
    "pydub==0.25.1",
    "pygments==2.18.0",
    "pymorphy3-dicts-ru==2.4.417150.4580142",
    "pymorphy3-dicts-uk==2.4.1.1.1663094765",
    "pymorphy3==2.0.2",
    "pyparsing==3.2.0",
    "pysocks==1.7.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.17",
    "pytz==2024.2",
    "pyyaml==6.0.2",
    "referencing==0.35.1",
    "requests-oauthlib==2.0.0",
    "requests==2.32.3",
    "rich==13.9.4",
    "rpds-py==0.21.0",
    "rsa==4.9",
    "ru-core-news-sm",
    "scikit-learn==1.5.2",
    "scipy==1.14.1",
    "setuptools==75.3.0",
    "six==1.16.0",
    "smart-open==6.4.0",
    "smmap==5.0.1",
    "sniffio==1.3.1",
    "soundfile==0.12.1",
    "soupsieve==2.6",
    "soxr==0.5.0.post1",
    "spacy-legacy==3.0.12",
    "spacy-loggers==1.0.5",
    "spacy-pkuseg==0.0.33",
    "spacy==3.7.0",
    "srsly==2.4.8",
    "starlette==0.37.2",
    "streamlit==1.40.0",
    "sudachidict-core==20241021",
    "sudachipy==0.6.8",
    "sv-core-news-sm",
    "telethon==1.28.5",
    "tenacity==9.0.0",
    "thinc==8.2.5",
    "threadpoolctl==3.5.0",
    "toml==0.10.2",
    "tornado==6.4.1",
    "tqdm==4.67.0",
    "typer==0.9.4",
    "types-requests==2.32.0.20241016",
    "typing-extensions==4.12.2",
    "typing-inspect==0.9.0",
    "tzdata==2024.2",
    "ujson==5.10.0",
    "uk-core-news-sm",
    "uritemplate==4.1.1",
    "urllib3==2.2.3",
    "uvicorn==0.32.0",
    "uvloop==0.21.0",
    "wasabi==1.1.3",
    "watchdog==5.0.3",
    "watchfiles==0.24.0",
    "weasel==0.3.4",
    "websockets==13.1",
    "wrapt==1.16.0",
    "yarl==1.17.1",
    "yt-dlp==2024.11.4",
    "zh-core-web-sm",
    "zipp==3.20.2",
]

[project.urls]
Issues = "https://github.com/astaff/freespeech/issues"
CI = "https://github.com/astaff/freespeech/actions"
Changelog = "https://github.com/astaff/freespeech/releases"

[tool.isort]
profile = "black"

# pyproject.toml
[tool.pytest.ini_options]
filterwarnings = [
    "error",
    'ignore:.*inspect.getargspec.*:DeprecationWarning',
    # note the use of single quote below to denote "raw" strings in TOML
    'ignore:the imp module is deprecated:DeprecationWarning', 
    'ignore:ssl.PROTOCOL_TLS is deprecated:DeprecationWarning',
    'ignore:The distutils package is deprecated and slated for removal in Python 3.12:DeprecationWarning',
    'ignore:unclosed transport <_SelectorSocketTransport:ResourceWarning',
    'ignore:unclosed <socket.socket:ResourceWarning',
    'ignore:unclosed <ssl.SSLSocket',
    # https://github.com/beetbox/audioread/issues/97
    'ignore:unclosed file <_io.BufferedReader:ResourceWarning',
    'ignore:Detected filter using positional arguments.:UserWarning',
    "ignore:'audioop' is deprecated and slated for removal in Python 3.13:DeprecationWarning",
    "ignore:'aifc' is deprecated and slated for removal in Python 3.13:DeprecationWarning",
    "ignore:.*:DeprecationWarning",
]
asyncio_mode = "strict"

[tool.uv.sources]
de-core-news-sm = { url = "https://github.com/explosion/spacy-models/releases/download/de_core_news_sm-3.7.0/de_core_news_sm-3.7.0.tar.gz" }
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.0/en_core_web_sm-3.7.0.tar.gz" }
es-core-news-sm = { url = "https://github.com/explosion/spacy-models/releases/download/es_core_news_sm-3.7.0/es_core_news_sm-3.7.0.tar.gz" }
fi-core-news-sm = { url = "https://github.com/explosion/spacy-models/releases/download/fi_core_news_sm-3.7.0/fi_core_news_sm-3.7.0.tar.gz" }
fr-core-news-sm = { url = "https://github.com/explosion/spacy-models/releases/download/fr_core_news_sm-3.7.0/fr_core_news_sm-3.7.0.tar.gz" }
it-core-news-sm = { url = "https://github.com/explosion/spacy-models/releases/download/it_core_news_sm-3.7.0/it_core_news_sm-3.7.0.tar.gz" }
ja-core-news-sm = { url = "https://github.com/explosion/spacy-models/releases/download/ja_core_news_sm-3.7.0/ja_core_news_sm-3.7.0.tar.gz" }
pl-core-news-sm = { url = "https://github.com/explosion/spacy-models/releases/download/pl_core_news_sm-3.7.0/pl_core_news_sm-3.7.0.tar.gz" }
pt-core-news-sm = { url = "https://github.com/explosion/spacy-models/releases/download/pt_core_news_sm-3.7.0/pt_core_news_sm-3.7.0.tar.gz" }
ru-core-news-sm = { url = "https://github.com/explosion/spacy-models/releases/download/ru_core_news_sm-3.7.0/ru_core_news_sm-3.7.0.tar.gz" }
sv-core-news-sm = { url = "https://github.com/explosion/spacy-models/releases/download/sv_core_news_sm-3.7.0/sv_core_news_sm-3.7.0.tar.gz" }
uk-core-news-sm = { url = "https://github.com/explosion/spacy-models/releases/download/uk_core_news_sm-3.7.0/uk_core_news_sm-3.7.0.tar.gz" }
zh-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/zh_core_web_sm-3.7.0/zh_core_web_sm-3.7.0.tar.gz" }

